# ftemplates

./: .gitignore  README.md  pyproject.toml  setup.py  template.py  templates.py
TextFileTemplates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
builtin_templates/: ds_notebook.ipynb
ftemplates/: cli.py
templates/: cli.py
